--- a/BrickBreaker/Properties/Resources.resx
+++ b/BrickBreaker/Properties/Resources.resx
@@ -429,7 +429,7 @@
   </data>
   <data name="snowmanFace" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\snowmanFace.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-</data>
+  </data>
   <data name="endBkgd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\endBkgd.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -441,7 +441,7 @@
   </data>
   <data name="flame" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flame.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-</data>
+  </data>
   <data name="bkgdMusic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\piano2.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -453,5 +453,8 @@
   </data>
   <data name="fireball" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fireball.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="clock_item" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clock_item.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
